Fixed mobile navigation alignment issue

--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -125,6 +125,7 @@
   }
 
   .mobile__menuDiv {
+    width: 100px;
     display: flex;
     align-items: center;
     gap: 7px;
